--- a/std/css/style.css
+++ b/std/css/style.css
@@ -487,6 +487,26 @@ a {
   }
 }
 
+.chlamydia-list-group__item--order {
+  list-style: decimal !important;
+}
+
+.chlamydia-list-group--orderlist {
+  padding: 0px 0px 0px 66px !important;
+}
+
+.chlamydia-list-group--innerlist {
+  margin-left: 15px;
+}
+
+.chlamydia-list-group--mrleft {
+  margin-left: 125px;
+}
+
+.chlamydia-list-group--mtop {
+  margin-top: 14px !important;
+}
+
 .chlamydia-list-group__item {
   list-style-type: disc;
   margin-bottom: 10px;
@@ -1003,6 +1023,10 @@ a {
   }
 }
 
+.disease-box__img-mleft {
+  margin-left: 253px;
+}
+
 .disease-box__header-summary {
   color: #e8ebf3;
 }
@@ -1297,6 +1321,10 @@ a {
 
 .faq-accordians .faq-title.first-child {
   margin-top: 45px;
+}
+
+.faq-accordians__image01 {
+  margin-top: 10px;
 }
 
 .faq-accordians .faq-answer {
@@ -1778,6 +1806,10 @@ a {
   margin-bottom: 0;
 }
 
+.mt-10 {
+  margin-top: 10px;
+}
+
 .mb-20 {
   margin-bottom: 20px;
 }
@@ -1802,6 +1834,22 @@ a {
   .mt-30 {
     margin-top: 20px;
   }
+}
+
+.ml-20 {
+  margin-left: 20px;
+}
+
+.ml-40 {
+  margin-left: 40px;
+}
+
+.ml-50 {
+  margin-left: 50px;
+}
+
+.ml-80 {
+  margin-left: 80px;
 }
 
 .w-70 {
@@ -1862,6 +1910,15 @@ a {
 
 .std-table {
   border-collapse: collapse;
+}
+
+.std-table--center {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.std-table--bg {
+  background-color: #a9a9a92e;
 }
 
 .std-table__th {
