--- a/std/scss/style.scss
+++ b/std/scss/style.scss
@@ -1476,6 +1476,12 @@ $testing-color2 99%;
 }
 
 // table
+.table-border-para {
+    margin-bottom: 0 !important;
+    border-top: 1px solid #22202082;
+    margin-top: 10px;
+}
+
 .std-table {
     border-collapse: collapse;
     &--center {
